# WildFire-Discord-Bot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
bot/: __init__.py  __main__.py  bot.py  constants.py
bot/exts/: error_handler.py  filter.py  test.py
model/: __init__.py  model.py  train_tweet.csv
postgres/: __init__.py  commandsexecution.py  tablecreation.sql  utils.py
postgres/tables/: tablecreation.sql
