[tool.poetry]
name = "ib-7"
version = "0.1.0"
description = "A discord bot for sentimental analysis"
authors = ["RohanJnr <rohanjnr44@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
hikari-lightbulb = "^1.2.1"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
