[tool.poetry]
name = "ib-7"
version = "0.1.0"
description = "A discord bot for sentimental analysis"
authors = ["RohanJnr <rohanjnr44@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
python-dotenv = "^0.19.0"
nltk = "^3.6.2"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
scikit-learn = "^0.24.2"
pandas = "^1.3.2"
asyncpg = "^0.24.0"
hikari-lightbulb = {url = "https://github.com/tandemdude/hikari-lightbulb/archive/development.zip"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
